[project]
name = "bilibili-barrage-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bilibili-api-python>=17.3.0",
    "httpx>=0.28.1",
    "jieba>=0.42.1",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "requests>=2.31.0",
    "seaborn>=0.13.2",
    "streamlit>=1.47.1",
    "wordcloud>=1.9.4",
]
